# mini_server

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.yml  server.yml  servers
files/: hpjradarr.yml  hpjsonarr.yml  prometheus.yml
group_vars/: all
