[tool.poetry]
name = "mini-server"
version = "0.1.0"
description = ""
authors = ["Justin Seiser <justinseiser@gmail.com>"]
readme = "README.md"
packages = [{include = "mini_server"}]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^6.5.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
ansible-lint = "^6.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
