[tool.poetry]
name = "mini-server"
version = "0.1.0"
description = ""
authors = ["Justin Seiser <justinseiser@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^11.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
ansible-lint = "^25.1.3 "

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
