[tool.poetry]
name = "mini-server"
version = "0.1.0"
description = ""
authors = ["Justin Seiser <justinseiser@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
ansible = "12.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
